<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">EventerZgz</string>
    <string name="hello_world">Hola mundo</string>
    <string name="action_settings">Settings</string>

    <string name="welcome">Bienvenido a EventerZGZ</string>
    <string name="configure">Configura a través de estos sencillos pasos tus gustos</string>
    <string name="saltar">SALTAR</string>
    <string name="finish">FINALIZAR</string>
    <string name="question_categories">"¿En qué categorías estás interesado?"</string>
    <string name="question_population">"¿A quién va dirigidos los eventos?"</string>
    <string name="question_map">"¿Sobre que zona deseas ver eventos?"</string>
    <string name="question_perfil">"¿Cuál es tú perfil?"</string>
    <string name="adjuntarPosicion">Deseo ver los eventos de la zona señalada</string>
    <string name="error_indique_check_posicion">Indique que desea ver los eventos de una zona</string>

    <string name="title_activity_detail_event">Detalle del evento</string>
    <string name="title_activity_list_event">Tus eventos</string>

    <string name="compartir">Compartir</string>
    <string name="compartircon">Compartir con: </string>
    <string name="verMas">Ver más</string>
    <string name="action_search">Search</string>
    <string name="contenido_no_disponible">Contenido no disponible</string>

    <string name="fecha">Fecha:</string>
    <string name="direccion">Dirección:</string>
    <string name="lugar">Lugar:</string>
    <string name="telefono">Teléfono:</string>
    <string name="mail">Mail:</string>
    <string name="conexion">Conexión:</string>
    <string name="web">Web:</string>
    <string name="no_result">No se han encontrado resultados</string>


    <string name="banner_ad_unit_id">ca-app-pub-6263790234186060/8952290830</string>
    <string name="banner_ad_unit_id_detalle">ca-app-pub-6263790234186060/2766156432</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
