<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ripple="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginBottom="70dp"
        android:orientation="vertical">

        <com.eventerzgz.view.utils.TextViewEventer
            android:id="@+id/textViewWelcome"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.6"
            android:gravity="center"
            android:text="@string/welcome"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/primary_color"
            android:textSize="40sp"/>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:src="@drawable/logo" />

        <com.eventerzgz.view.utils.TextViewEventer
            android:id="@+id/textViewSettings"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:text="@string/configure"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/primary_color"
            android:textSize="20sp"/>

    </LinearLayout>

    <com.eventerzgz.view.utils.ButtonView
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:text="@string/saltar"
        android:id="@+id/buttonClose"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        ripple:alphaFactor="0.7"
        android:background="@drawable/card_bk"
        ripple:rippleColor="@color/primary_color"
        ripple:hover="true"/>
</RelativeLayout>